--- a/Connector/Connector.csproj
+++ b/Connector/Connector.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="112.1.0" />
+    <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
   </ItemGroup>
 
   <ItemGroup>
